# custom-mcp-server

./: .gitignore  README.md  pyproject.toml
custom_mcp_server/: __main__.py  client.py  server.py
custom_mcp_server/model/: company_overview.py  company_sentiment.py  historical_data.py  stock_price.py
