[project]
name = "custom-mcp-server"
version = "0.1.0"
description = ""
authors = ["Blessed Josiah <blessed_josiah@yahoo.com>"]
readme = "README.md"
homepage = "https://github.com/bjoxiah/custom-mcp-server" 
repository = "https://github.com/bjoxiah/custom-mcp-server"
requires-python = ">=3.10, <4.0"
dependencies = [
    "fastmcp (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "custom_mcp_server", from = "."}]

[tool.poetry.scripts]
server = "custom_mcp_server.__main__:main"
client = "custom_mcp_server.client:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
